compilers last homework/parser.output
Terminals which are not used

   MINUS1
   PLUS1
   NEW


Grammar

    0 $accept: class $end

    1 @1: /* empty */

    2 class: @1 CLASS ID '{' Body '}'

    3 Body: /* empty */
    4     | Body Function
    5     | Body Global

    6 Global: Data_Type ID ';'
    7       | Data_Type ID '=' Expr ';'

    8 @2: /* empty */

    9 Function: Data_Type ID @2 '(' Params_empty ')' '{' instructions '}'

   10 @3: /* empty */

   11 Function: VOID ID @3 '(' Params_empty ')' '{' instructions '}'

   12 parameter: Data_Type ID

   13 Params: parameter
   14       | Params ',' parameter

   15 Params_empty: /* empty */
   16             | Params

   17 Data_Type: BOOLEAN
   18          | DOUBLE
   19          | INT
   20          | STRING_TYPE

   21 Expr: '!' Expr
   22     | '-' Expr
   23     | '+' Expr
   24     | '(' Expr ')'
   25     | ID
   26     | ID '[' Expr ']'
   27     | ID '=' Expr
   28     | ID '[' Expr ']' '=' Expr
   29     | ID '(' Expr_List ')'
   30     | ID '(' ')'
   31     | Expr '+' Expr
   32     | Expr '-' Expr
   33     | Expr '*' Expr
   34     | Expr '/' Expr
   35     | Expr '%' Expr
   36     | Expr OR Expr
   37     | Expr AND Expr
   38     | Expr EQ Expr
   39     | Expr NOTEQ Expr
   40     | Expr '<' Expr
   41     | Expr '>' Expr
   42     | Expr INF Expr
   43     | Expr SUP Expr
   44     | INTEGER
   45     | REAL
   46     | STRING
   47     | TRUE
   48     | FALSE
   49     | NUL

   50 Expr_List: Expr
   51          | Expr_List ',' Expr

   52 instructions: /* empty */
   53             | instructions instruction

   54 @4: /* empty */

   55 instruction: WHILE @4 '(' Expr ')' instruction

   56 @5: /* empty */

   57 instruction: FOR '(' Data_Type ID ';' @5 May_EXP ';' May_EXP ')' instruction

   58 @6: /* empty */

   59 instruction: FOR '(' Data_Type ID '=' Expr ';' @6 May_EXP ';' May_EXP ')' instruction
   60            | IF '(' Expr ')' instruction
   61            | IF '(' Expr ')' instruction ELSE instruction
   62            | Expr ';'
   63            | Data_Type ID '=' Expr ';'
   64            | Data_Type ID ';'
   65            | Data_Type ID '[' INTEGER ']' ';'
   66            | ';'
   67            | '{' instructions '}'
   68            | RETURN May_EXP ';'

   69 May_EXP: /* empty */
   70        | Expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 21
'%' (37) 35
'(' (40) 9 11 24 29 30 55 57 59 60 61
')' (41) 9 11 24 29 30 55 57 59 60 61
'*' (42) 33
'+' (43) 23 31
',' (44) 14 51
'-' (45) 22 32
'/' (47) 34
';' (59) 6 7 57 59 62 63 64 65 66 68
'<' (60) 40
'=' (61) 7 27 28 59 63
'>' (62) 41
'[' (91) 26 28 65
']' (93) 26 28 65
'{' (123) 2 9 11 67
'}' (125) 2 9 11 67
error (256)
MINUS1 (258)
PLUS1 (259)
AND (260) 37
OR (261) 36
NOTEQ (262) 39
EQ (263) 38
INF (264) 42
SUP (265) 43
INT (266) 19
CLASS (267) 2
DOUBLE (268) 18
BOOLEAN (269) 17
NUL (270) 49
FOR (271) 57 59
WHILE (272) 55
IF (273) 60 61
ELSE (274) 61
TRUE (275) 47
FALSE (276) 48
VOID (277) 11
RETURN (278) 68
NEW (279)
ID (280) 2 6 7 9 11 12 25 26 27 28 29 30 57 59 63 64 65
INTEGER (281) 44 65
REAL (282) 45
STRING (283) 46
STRING_TYPE (284) 20
THEN (285)
UNARYOPERATOR (286)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
class (50)
    on left: 2, on right: 0
@1 (51)
    on left: 1, on right: 2
Body (52)
    on left: 3 4 5, on right: 2 4 5
Global (53)
    on left: 6 7, on right: 5
Function (54)
    on left: 9 11, on right: 4
@2 (55)
    on left: 8, on right: 9
@3 (56)
    on left: 10, on right: 11
parameter (57)
    on left: 12, on right: 13 14
Params (58)
    on left: 13 14, on right: 14 16
Params_empty (59)
    on left: 15 16, on right: 9 11
Data_Type (60)
    on left: 17 18 19 20, on right: 6 7 9 12 57 59 63 64 65
Expr (61)
    on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
    39 40 41 42 43 44 45 46 47 48 49, on right: 7 21 22 23 24 26 27
    28 31 32 33 34 35 36 37 38 39 40 41 42 43 50 51 55 59 60 61 62
    63 70
Expr_List (62)
    on left: 50 51, on right: 29 51
instructions (63)
    on left: 52 53, on right: 9 11 53 67
instruction (64)
    on left: 55 57 59 60 61 62 63 64 65 66 67 68, on right: 53 55 57
    59 60 61
@4 (65)
    on left: 54, on right: 55
@5 (66)
    on left: 56, on right: 57
@6 (67)
    on left: 58, on right: 59
May_EXP (68)
    on left: 69 70, on right: 57 59 68


state 0

    0 $accept: . class $end

    $default  reduce using rule 1 (@1)

    class  go to state 1
    @1     go to state 2


state 1

    0 $accept: class . $end

    $end  shift, and go to state 3


state 2

    2 class: @1 . CLASS ID '{' Body '}'

    CLASS  shift, and go to state 4


state 3

    0 $accept: class $end .

    $default  accept


state 4

    2 class: @1 CLASS . ID '{' Body '}'

    ID  shift, and go to state 5


state 5

    2 class: @1 CLASS ID . '{' Body '}'

    '{'  shift, and go to state 6


state 6

    2 class: @1 CLASS ID '{' . Body '}'

    $default  reduce using rule 3 (Body)

    Body  go to state 7


state 7

    2 class: @1 CLASS ID '{' Body . '}'
    4 Body: Body . Function
    5     | Body . Global

    INT          shift, and go to state 8
    DOUBLE       shift, and go to state 9
    BOOLEAN      shift, and go to state 10
    VOID         shift, and go to state 11
    STRING_TYPE  shift, and go to state 12
    '}'          shift, and go to state 13

    Global     go to state 14
    Function   go to state 15
    Data_Type  go to state 16


state 8

   19 Data_Type: INT .

    $default  reduce using rule 19 (Data_Type)


state 9

   18 Data_Type: DOUBLE .

    $default  reduce using rule 18 (Data_Type)


state 10

   17 Data_Type: BOOLEAN .

    $default  reduce using rule 17 (Data_Type)


state 11

   11 Function: VOID . ID @3 '(' Params_empty ')' '{' instructions '}'

    ID  shift, and go to state 17


state 12

   20 Data_Type: STRING_TYPE .

    $default  reduce using rule 20 (Data_Type)


state 13

    2 class: @1 CLASS ID '{' Body '}' .

    $default  reduce using rule 2 (class)


state 14

    5 Body: Body Global .

    $default  reduce using rule 5 (Body)


state 15

    4 Body: Body Function .

    $default  reduce using rule 4 (Body)


state 16

    6 Global: Data_Type . ID ';'
    7       | Data_Type . ID '=' Expr ';'
    9 Function: Data_Type . ID @2 '(' Params_empty ')' '{' instructions '}'

    ID  shift, and go to state 18


state 17

   11 Function: VOID ID . @3 '(' Params_empty ')' '{' instructions '}'

    $default  reduce using rule 10 (@3)

    @3  go to state 19


state 18

    6 Global: Data_Type ID . ';'
    7       | Data_Type ID . '=' Expr ';'
    9 Function: Data_Type ID . @2 '(' Params_empty ')' '{' instructions '}'

    '='  shift, and go to state 20
    ';'  shift, and go to state 21

    $default  reduce using rule 8 (@2)

    @2  go to state 22


state 19

   11 Function: VOID ID @3 . '(' Params_empty ')' '{' instructions '}'

    '('  shift, and go to state 23


state 20

    7 Global: Data_Type ID '=' . Expr ';'

    NUL      shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    ID       shift, and go to state 27
    INTEGER  shift, and go to state 28
    REAL     shift, and go to state 29
    STRING   shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '('      shift, and go to state 33
    '!'      shift, and go to state 34

    Expr  go to state 35


state 21

    6 Global: Data_Type ID ';' .

    $default  reduce using rule 6 (Global)


state 22

    9 Function: Data_Type ID @2 . '(' Params_empty ')' '{' instructions '}'

    '('  shift, and go to state 36


state 23

   11 Function: VOID ID @3 '(' . Params_empty ')' '{' instructions '}'

    INT          shift, and go to state 8
    DOUBLE       shift, and go to state 9
    BOOLEAN      shift, and go to state 10
    STRING_TYPE  shift, and go to state 12

    $default  reduce using rule 15 (Params_empty)

    parameter     go to state 37
    Params        go to state 38
    Params_empty  go to state 39
    Data_Type     go to state 40


state 24

   49 Expr: NUL .

    $default  reduce using rule 49 (Expr)


state 25

   47 Expr: TRUE .

    $default  reduce using rule 47 (Expr)


state 26

   48 Expr: FALSE .

    $default  reduce using rule 48 (Expr)


state 27

   25 Expr: ID .
   26     | ID . '[' Expr ']'
   27     | ID . '=' Expr
   28     | ID . '[' Expr ']' '=' Expr
   29     | ID . '(' Expr_List ')'
   30     | ID . '(' ')'

    '='  shift, and go to state 41
    '('  shift, and go to state 42
    '['  shift, and go to state 43

    $default  reduce using rule 25 (Expr)


state 28

   44 Expr: INTEGER .

    $default  reduce using rule 44 (Expr)


state 29

   45 Expr: REAL .

    $default  reduce using rule 45 (Expr)


state 30

   46 Expr: STRING .

    $default  reduce using rule 46 (Expr)


state 31

   22 Expr: '-' . Expr

    NUL      shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    ID       shift, and go to state 27
    INTEGER  shift, and go to state 28
    REAL     shift, and go to state 29
    STRING   shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '('      shift, and go to state 33
    '!'      shift, and go to state 34

    Expr  go to state 44


state 32

   23 Expr: '+' . Expr

    NUL      shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    ID       shift, and go to state 27
    INTEGER  shift, and go to state 28
    REAL     shift, and go to state 29
    STRING   shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '('      shift, and go to state 33
    '!'      shift, and go to state 34

    Expr  go to state 45


state 33

   24 Expr: '(' . Expr ')'

    NUL      shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    ID       shift, and go to state 27
    INTEGER  shift, and go to state 28
    REAL     shift, and go to state 29
    STRING   shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '('      shift, and go to state 33
    '!'      shift, and go to state 34

    Expr  go to state 46


state 34

   21 Expr: '!' . Expr

    NUL      shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    ID       shift, and go to state 27
    INTEGER  shift, and go to state 28
    REAL     shift, and go to state 29
    STRING   shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '('      shift, and go to state 33
    '!'      shift, and go to state 34

    Expr  go to state 47


state 35

    7 Global: Data_Type ID '=' Expr . ';'
   31 Expr: Expr . '+' Expr
   32     | Expr . '-' Expr
   33     | Expr . '*' Expr
   34     | Expr . '/' Expr
   35     | Expr . '%' Expr
   36     | Expr . OR Expr
   37     | Expr . AND Expr
   38     | Expr . EQ Expr
   39     | Expr . NOTEQ Expr
   40     | Expr . '<' Expr
   41     | Expr . '>' Expr
   42     | Expr . INF Expr
   43     | Expr . SUP Expr

    AND    shift, and go to state 48
    OR     shift, and go to state 49
    NOTEQ  shift, and go to state 50
    EQ     shift, and go to state 51
    INF    shift, and go to state 52
    SUP    shift, and go to state 53
    '<'    shift, and go to state 54
    '>'    shift, and go to state 55
    '-'    shift, and go to state 56
    '+'    shift, and go to state 57
    '*'    shift, and go to state 58
    '/'    shift, and go to state 59
    '%'    shift, and go to state 60
    ';'    shift, and go to state 61


state 36

    9 Function: Data_Type ID @2 '(' . Params_empty ')' '{' instructions '}'

    INT          shift, and go to state 8
    DOUBLE       shift, and go to state 9
    BOOLEAN      shift, and go to state 10
    STRING_TYPE  shift, and go to state 12

    $default  reduce using rule 15 (Params_empty)

    parameter     go to state 37
    Params        go to state 38
    Params_empty  go to state 62
    Data_Type     go to state 40


state 37

   13 Params: parameter .

    $default  reduce using rule 13 (Params)


state 38

   14 Params: Params . ',' parameter
   16 Params_empty: Params .

    ','  shift, and go to state 63

    $default  reduce using rule 16 (Params_empty)


state 39

   11 Function: VOID ID @3 '(' Params_empty . ')' '{' instructions '}'

    ')'  shift, and go to state 64


state 40

   12 parameter: Data_Type . ID

    ID  shift, and go to state 65


state 41

   27 Expr: ID '=' . Expr

    NUL      shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    ID       shift, and go to state 27
    INTEGER  shift, and go to state 28
    REAL     shift, and go to state 29
    STRING   shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '('      shift, and go to state 33
    '!'      shift, and go to state 34

    Expr  go to state 66


state 42

   29 Expr: ID '(' . Expr_List ')'
   30     | ID '(' . ')'

    NUL      shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    ID       shift, and go to state 27
    INTEGER  shift, and go to state 28
    REAL     shift, and go to state 29
    STRING   shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '('      shift, and go to state 33
    ')'      shift, and go to state 67
    '!'      shift, and go to state 34

    Expr       go to state 68
    Expr_List  go to state 69


state 43

   26 Expr: ID '[' . Expr ']'
   28     | ID '[' . Expr ']' '=' Expr

    NUL      shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    ID       shift, and go to state 27
    INTEGER  shift, and go to state 28
    REAL     shift, and go to state 29
    STRING   shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '('      shift, and go to state 33
    '!'      shift, and go to state 34

    Expr  go to state 70


state 44

   22 Expr: '-' Expr .
   31     | Expr . '+' Expr
   32     | Expr . '-' Expr
   33     | Expr . '*' Expr
   34     | Expr . '/' Expr
   35     | Expr . '%' Expr
   36     | Expr . OR Expr
   37     | Expr . AND Expr
   38     | Expr . EQ Expr
   39     | Expr . NOTEQ Expr
   40     | Expr . '<' Expr
   41     | Expr . '>' Expr
   42     | Expr . INF Expr
   43     | Expr . SUP Expr

    $default  reduce using rule 22 (Expr)


state 45

   23 Expr: '+' Expr .
   31     | Expr . '+' Expr
   32     | Expr . '-' Expr
   33     | Expr . '*' Expr
   34     | Expr . '/' Expr
   35     | Expr . '%' Expr
   36     | Expr . OR Expr
   37     | Expr . AND Expr
   38     | Expr . EQ Expr
   39     | Expr . NOTEQ Expr
   40     | Expr . '<' Expr
   41     | Expr . '>' Expr
   42     | Expr . INF Expr
   43     | Expr . SUP Expr

    $default  reduce using rule 23 (Expr)


state 46

   24 Expr: '(' Expr . ')'
   31     | Expr . '+' Expr
   32     | Expr . '-' Expr
   33     | Expr . '*' Expr
   34     | Expr . '/' Expr
   35     | Expr . '%' Expr
   36     | Expr . OR Expr
   37     | Expr . AND Expr
   38     | Expr . EQ Expr
   39     | Expr . NOTEQ Expr
   40     | Expr . '<' Expr
   41     | Expr . '>' Expr
   42     | Expr . INF Expr
   43     | Expr . SUP Expr

    AND    shift, and go to state 48
    OR     shift, and go to state 49
    NOTEQ  shift, and go to state 50
    EQ     shift, and go to state 51
    INF    shift, and go to state 52
    SUP    shift, and go to state 53
    '<'    shift, and go to state 54
    '>'    shift, and go to state 55
    '-'    shift, and go to state 56
    '+'    shift, and go to state 57
    '*'    shift, and go to state 58
    '/'    shift, and go to state 59
    '%'    shift, and go to state 60
    ')'    shift, and go to state 71


state 47

   21 Expr: '!' Expr .
   31     | Expr . '+' Expr
   32     | Expr . '-' Expr
   33     | Expr . '*' Expr
   34     | Expr . '/' Expr
   35     | Expr . '%' Expr
   36     | Expr . OR Expr
   37     | Expr . AND Expr
   38     | Expr . EQ Expr
   39     | Expr . NOTEQ Expr
   40     | Expr . '<' Expr
   41     | Expr . '>' Expr
   42     | Expr . INF Expr
   43     | Expr . SUP Expr

    $default  reduce using rule 21 (Expr)


state 48

   37 Expr: Expr AND . Expr

    NUL      shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    ID       shift, and go to state 27
    INTEGER  shift, and go to state 28
    REAL     shift, and go to state 29
    STRING   shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '('      shift, and go to state 33
    '!'      shift, and go to state 34

    Expr  go to state 72


state 49

   36 Expr: Expr OR . Expr

    NUL      shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    ID       shift, and go to state 27
    INTEGER  shift, and go to state 28
    REAL     shift, and go to state 29
    STRING   shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '('      shift, and go to state 33
    '!'      shift, and go to state 34

    Expr  go to state 73


state 50

   39 Expr: Expr NOTEQ . Expr

    NUL      shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    ID       shift, and go to state 27
    INTEGER  shift, and go to state 28
    REAL     shift, and go to state 29
    STRING   shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '('      shift, and go to state 33
    '!'      shift, and go to state 34

    Expr  go to state 74


state 51

   38 Expr: Expr EQ . Expr

    NUL      shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    ID       shift, and go to state 27
    INTEGER  shift, and go to state 28
    REAL     shift, and go to state 29
    STRING   shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '('      shift, and go to state 33
    '!'      shift, and go to state 34

    Expr  go to state 75


state 52

   42 Expr: Expr INF . Expr

    NUL      shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    ID       shift, and go to state 27
    INTEGER  shift, and go to state 28
    REAL     shift, and go to state 29
    STRING   shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '('      shift, and go to state 33
    '!'      shift, and go to state 34

    Expr  go to state 76


state 53

   43 Expr: Expr SUP . Expr

    NUL      shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    ID       shift, and go to state 27
    INTEGER  shift, and go to state 28
    REAL     shift, and go to state 29
    STRING   shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '('      shift, and go to state 33
    '!'      shift, and go to state 34

    Expr  go to state 77


state 54

   40 Expr: Expr '<' . Expr

    NUL      shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    ID       shift, and go to state 27
    INTEGER  shift, and go to state 28
    REAL     shift, and go to state 29
    STRING   shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '('      shift, and go to state 33
    '!'      shift, and go to state 34

    Expr  go to state 78


state 55

   41 Expr: Expr '>' . Expr

    NUL      shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    ID       shift, and go to state 27
    INTEGER  shift, and go to state 28
    REAL     shift, and go to state 29
    STRING   shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '('      shift, and go to state 33
    '!'      shift, and go to state 34

    Expr  go to state 79


state 56

   32 Expr: Expr '-' . Expr

    NUL      shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    ID       shift, and go to state 27
    INTEGER  shift, and go to state 28
    REAL     shift, and go to state 29
    STRING   shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '('      shift, and go to state 33
    '!'      shift, and go to state 34

    Expr  go to state 80


state 57

   31 Expr: Expr '+' . Expr

    NUL      shift, and go to state 24
    TRUE     shift, and go to state 25
    FALSE    shift, and go to state 26
    ID       shift, and go to state 27
    INTEGER  shift, and go to state 28
    REAL     shift, and go to state 29
    STRING   shift, and go to state 30
    '-'      shift, and go to state 31
    '+'      shift, and go to state 32
    '('      shift, and go to state 33
    '!'      shift, and go to state 34

    Expr  go to state 81


state 58

   33 Expr: Expr '*' . Expr
